# You must change these to your own details.
[package]
name = "rust-webassembly-weather-reports"
description = "Weather Information System- Get the mood of your city on one click using Rust and Webassembly"
version = "0.1.1"
authors = ["Ayush <ayushmishra2005@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
chrono = "0.4.11"
reqwest = "0.10.6"
wasm-bindgen-futures = "0.4.1"
json= "*"
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.63"
gloo = "0.2.1"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.40"
features = [
             'Document',
             'Element',
             'HtmlElement',
             'Node',
             'Window',
             'console'
           ]
